# audio_to_text

./: pyproject.toml  requirements.txt
archive/: audio_transcription.ipynb
converter/: convert.py  utils.py
examples/: transcribe_mp4_files.ipynb
transcriber/: transcribe.py
