[tool.poetry]
name = "audio-to-text"
version = "0.1.0"
description = ""
authors = ["Colleen"]
packages = [
    { include = "converter"},
    { include = "transcriber"}
]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
openai = "^0.28.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
plotly = "^5.16.1"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"
tiktoken = "^0.4.0"
numpy = "^1.24.3"
scrapy = "^2.10.1"
pycryptodome = "^3.19.0"
tabulate = "^0.9.0"
tabula-py = "^2.8.2"
pdfplumber = "^0.10.2"
panel = "^1.2.3"
jupyter-bokeh = "^3.0.7"
jupyterlab = "^4.0.6"
pyaudio = "^0.2.14"
speechrecognition = "^3.10.0"
openai-whisper = { git = "https://github.com/openai/whisper.git", tag = "v20231117" }
gradio = "^4.5.0"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
openpyxl = "^3.1.2"
notebook = "^7.0.4"
jupyter-nbrequirements = "^0.7.3"
faster-whisper = "^0.9.0"
ffmpeg-python = "^0.2.0"
pocketsphinx = "^5.0.2"
soundfile = "^0.12.1"
matplotlib = "^3.7.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
